Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130737

tst_QDir::mkdirWithPermissions fails on CI with VxWorks

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.9.0 FF
    • 6.9
    • Device Creation
    • None

    Description

      `tst_QDir::mkdirWithPermissions(0000)` Fails with error:

      FAIL!  : tst_QDir::mkdirWithPermissions(0000) Compared values are not the same
      Actual   (actualPermissions & setPermissions): 0x7050
      Expected (permissions)                       : 0x0
      Loc: [/home/qt/work/qt/qtbase/tests/auto/corelib/io/qdir/tst_qdir.cpp(517)]
      

      Error found on Nightly build:
      https://testresults.qt.io/coin/integration/qt/qtbase/tasks/nightly1730160003

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cnn Qt Core & Network
            michal.los Michał Łoś
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes